# WorkshopFastAPI

./: Dockerfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  test_main.http
app/: main.py
