[tool.poetry]
name = "baseprojectfastapi"
version = "0.1.0"
description = ""
authors = ["Guilherme Lima <guilherme.pereira@provafacilnaweb.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
